<resources>
    <string name="app_name">RPL Assignment</string>

    <string name="member_nurul">Nurul Ngaeni</string>
    <string name="member_raditya">Raditya Firman S</string>
    <string name="member_rafael">Rafael Aditya W</string>
    <string name="member_sherly">Sherly Putriani</string>

    <string name="role_review">Code Reviewer</string>
    <string name="role_engineer">Software Engineer</string>
    <string name="role_pm">Project Manager</string>
    <string name="kelompok_4">Kelompok 4</string>
    <string name="description">Daftar Anggota Kelompok</string>
    <string name="title_activity_raditya">radityaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nim_raditya">V3421074</string>
    <string name="member_dewantoro">Dewantoro Naufal</string>
    <string name="nim_dewantoro">V3421096</string>
    <string name="nim_rafael">V3421075</string>
    <string name="nim_nurul">V3421073</string>
    <string name="nim_sherly">V3421089</string>
</resources>